css/style.css
/* ... */
@keyframes loopLeft1 {
  0% {
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
  }
}

@keyframes loopLeft2 {
  0% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }

  to {
    -webkit-transform: translateX(-200%);
    transform: translateX(-200%);
  }
}

.section-service .bottom-decoration-text-container .decoration-text-2 {
  margin-top: -42px;
  stroke: #ffd700;
  fill: transparent;

}

.section-service .bottom-decoration-text-container .decoration-text-2 div:first-child {
  -webkit-animation: loopRight1 60s -30s linear infinite;
  animation: loopRight1 60s -30s linear infinite;
}

.section-service .bottom-decoration-text-container .decoration-text-2 div:last-child {
  -webkit-animation: loopRight2 60s linear infinite;
  animation: loopRight2 60s linear infinite;
}

@keyframes loopRight1 {
  0% {
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  to {
    -webkit-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes loopRight2 {
  0% {
    -webkit-transform: translateX(-200%);
    transform: translateX(-200%);
  }

  to {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}

.section-project {
  position: relative;
  z-index: 1;
  background: #fff;
  transition: background-color .6s linear;
}

.section-project.isblack {
  background-color: #373737;
}

.section-project.isblack .decoration-text {
  opacity: 0.01;
}

.section-project .decoration-text {
  position: absolute;
  top: 128px;
  left: -21px;
  width: 648px;
  height: 220px;
  transition: left .5s linear;
  fill: #fff;
  opacity: 0.2;
}

.section-project .section-inner {
  overflow: hidden;
  padding: 198px 7.9% 220px;
}

.section-project .section-heading {
  position: relative;
  margin-bottom: 50px;
  color: #373737;
  transition: color 0.65s cubic-bezier(0.18, 0.06, 0.23, 1);
}

.section-project.isblack .section-heading {
  color: #fff;
}

.section-project .section-heading .btn-arrow-right {
  position: absolute;
  top: 50%;
  right: -10px;
  transform: translateY(-50%);
}

.section-project .section-heading .btn-arrow-right .icon-arrow-right {
  padding: 13px 25px;
}

.section-project .section-heading .btn-arrow-right a:hover .icon-arrow-right {
  padding: 8px 16px 8px 23px;
}

.section-project.isblack .section-heading .btn-arrow-right .btn-text {
  color: #fff;
}

.section-project .slider {
  width: 100%;
}

.section-project .swiper-slide .slider-img-container {
  max-height: 400px;
}

.section-project .swiper-slide .slider-text-container {
  color: #fff;
}

.section-project .swiper-slide .slider-text-container .num {
  font-size: 12px;
  opacity: .4;
}

.section-project .swiper-slide {
  width: 600px !important;
}

.section-information {
  position: relative;
  z-index: 1;
  margin-top: 370px;
  background: #fff;
}

.section-information .shape-circle-ring-gray {
  bottom: -188px;
  left: -210px;
  width: 472px;
  height: 472px;
  fill: #f7f7f7;
}

.section-information .decoration-text {
  position: absolute;
  top: 116px;
  right: -382px;
  width: 1026px;
  height: 180px;
  transition: right .5s linear;
  fill: #f7f7f7;
}

.section-information .section-inner {
  padding: 196px 120px 0;
}

.section-information .block-container {
  display: flex;
  position: relative;
  align-items: center;
}

.section-information .main-text {
  line-height: 1;
  margin-left: 50px;
  font-size: 15px;
  letter-spacing: -0.048em;
}

.section-information .btn-arrow-right {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}

.section-information .information-list {
  position: relative;
  margin-top: 79px;
}

.section-information .information-list li .date {
  line-height: 1;
  margin-top: 7px;
  font-size: 11px;
  letter-spacing: 0.1em;
}

.section-information .information-list li .category {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  margin-left: 20px;
}

.section-information .information-list li .category span {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 22px;
  line-height: 1;
  margin-right: 6px;
  margin-bottom: 6px;
  padding: 2px 18px 2px;
  background: #f1f1f1;
  font-size: 11px;
  font-weight: bold;
  letter-spacing: 0.04em;
  border-radius: 11px;
}

.section-information .information-list li .title {
  width: 100%;
  line-height: 1.8;
  margin-top: 10px;
  font-size: 14px;
  text-align: justify;
  letter-spacing: 0.09em;
}

.section-information .information-list li .title span {
  transition: border-color 0.6s cubic-bezier(0, 0.55, 0.45, 1);
  border-bottom: 1px solid transparent;
}

.section-information .information-list li a {
  display: flex;
  position: relative;
  flex-wrap: wrap;
  padding: 32px 134px 33px 0;
  border-top: 1px solid #e1e4e6;
}

.section-information .information-list a:hover .btn-arrow-right .icon-arrow-right {
  -webkit-transform: scale(0.85);
  transform: scale(0.85);
}

.section-information .information-list .btn-arrow-right {
  position: absolute;
  top: 30%;
  right: 0;
}

.section-information .information-list .btn-arrow-right .icon-arrow-right {
  background-color: #f3f3f3;
}

.section-information .information-list .btn-arrow-right .icon-arrow-right .icon {
  fill: #373737;
}

.section-information .information-list a:hover .title span {
  border-color: #959595;
}

.section-careers {
  position: relative;
  overflow: hidden;
  background-color: #fff;
}

.section-careers .section-inner {
  padding: 218px 120px 236px;
  max-width: 1290px;
}

.section-careers .section-inner .section-heading {
  position: relative;
  z-index: 1;
}

.section-careers .text-en {
  position: relative;
  top: 0;
  left: 0;
  line-height: 1;
  margin-top: 61px;
  color: rgb(55, 55, 55);
  font-size: 160px;
  white-space: nowrap;
  letter-spacing: -0.035em;
  z-index: 1;
  transition: all .5s linear;
}
/* ... */

